--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+}
+
+.app-header {
+  display: block;
+  height: 15%;
+  min-height: 6rem;
+  border-bottom: 1px solid black;
+}
+
+.app-header .routes > span {
+  font-weight: bold;
+}
+
+.app-body {
+  display: block;
+  width: 100%;
+  height: 80%;
+  min-height: 36rem;
+}
+
+.app-footer {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
+  height: 5%;
+  min-height: 6rem;
+  border-top: 1px solid black;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app-footer .contact-info {
+  padding: 1rem;
 }
