--- a/UI/react-app/src/common/Dropdown/Dropdown.scss
+++ b/UI/react-app/src/common/Dropdown/Dropdown.scss
@@ -1,6 +1,10 @@
 .dropdown {
     position: relative;
 
+    span {
+        cursor: pointer;
+    }
+
     .menu {
         position: absolute;
       
