--- a/UI/react-app/src/common/Grid/Grid.scss
+++ b/UI/react-app/src/common/Grid/Grid.scss
@@ -1,3 +1,52 @@
 .grid {
-    border: 1px solid black;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+
+    table {
+        width: 100%;
+        max-width: 100%;
+        height: 100%;
+        border: 1px solid black;
+        border-collapse: collapse;
+
+        thead .row-header {
+            font-weight: bold;
+            border-bottom: 1px solid black;
+        }
+
+        thead > tr > th:last-child {
+            width: 5%;
+        }
+
+        tbody {
+            tr:hover {
+                background-color: gainsboro;
+            }
+
+            tr > td {
+                text-align: center;
+            }
+
+            tr > td:last-child {
+                width: 5%;
+                display: flex;
+                span {
+                    padding-left: 6px;
+                    opacity: .7;
+                    &:hover {
+                        opacity: 1;
+                        cursor: pointer;
+                    }
+                }
+            }
+        }
+
+        .cell {
+            text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: nowrap;
+        }
+
+    }
 }
